--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/reportifyr.png
   actions:
     - text: reportifyr User Guide
-      link: guides/user_guide
+      link: guides/intro
       icon: right-arrow
     - text: Explore the reportifyr repository!
       link: https://github.com/A2-ai/reportifyr
