--- a/src/content/docs/guides/new_user_guide.mdx
+++ b/src/content/docs/guides/new_user_guide.mdx
@@ -90,9 +90,9 @@ lr <- pk_params %>%
   labs(x = "Subject weight (kg)", y = "AUC (hr*mg/L)")
 ```
 
-<img src={`${import.meta.env.BASE_URL}/images/pk-params.png`} />
+<img src={`${import.meta.env.BASE_URL}images/pk-params.png`} />
 
-<img src={`${import.meta.env.BASE_URL}/images/theoph-pk-exposure.png`} />
+<img src={`${import.meta.env.BASE_URL}images/theoph-pk-exposure.png`} />
 
 ### Step 5
 
@@ -132,7 +132,7 @@ appropriate directory:
 
 As depicted here:
 
-<img src={`${import.meta.env.BASE_URL}/images/magic-string.png`} />
+<img src={`${import.meta.env.BASE_URL}images/magic-string.png`} />
 
 ### Step 7
 
@@ -166,6 +166,6 @@ finalize_document(
 ```
 
 An important note, this step-by-step guide is an abbreviated form of the guides on
-<a href={`${import.meta.env.BASE_URL}/guides/initializing_reportifyr/`}>Initializing Reportifyr</a>,
-<a href={`${import.meta.env.BASE_URL}/guides/performing_analyses/`}>Performing Analyses</a>,
-and <a href={`${import.meta.env.BASE_URL}/guides/drafting_reports/`}>Drafting Reports</a>.
+<a href={`${import.meta.env.BASE_URL}guides/initializing_reportifyr/`}>Initializing Reportifyr</a>,
+<a href={`${import.meta.env.BASE_URL}guides/performing_analyses/`}>Performing Analyses</a>,
+and <a href={`${import.meta.env.BASE_URL}guides/drafting_reports/`}>Drafting Reports</a>.
