--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -22,37 +22,37 @@ import { Card, CardGrid, Icon } from '@astrojs/starlight/components';
 ## Quick Links to reportifyr References
 
 <CardGrid stagger>
-  <a href={`${import.meta.env.BASE_URL}/reference/setup/setup/`} class="setup-card" style="text-decoration: none;">
+  <a href={`${import.meta.env.BASE_URL}reference/setup/setup/`} class="setup-card" style="text-decoration: none;">
     <Card title="Setup" icon="seti:info">
       Learn how to initialize and configure reportifyr for your reports.
     </Card>
   </a>
 
-  <a href={`${import.meta.env.BASE_URL}/reference/exporting/exporting/`} class="exporting-card" style="text-decoration: none;">
+  <a href={`${import.meta.env.BASE_URL}reference/exporting/exporting/`} class="exporting-card" style="text-decoration: none;">
     <Card title="Exporting" icon="seti:folder">
       Standardize and save your analysis outputs.
     </Card>
   </a>
 
-  <a href={`${import.meta.env.BASE_URL}/reference/metadata/metadata/`} class="metadata-card" style="text-decoration: none;">
+  <a href={`${import.meta.env.BASE_URL}reference/metadata/metadata/`} class="metadata-card" style="text-decoration: none;">
     <Card title="Metadata" icon="seti:json">
       Create, manage, or preview metadata for your reports.
     </Card>
   </a>
   
-  <a href={`${import.meta.env.BASE_URL}/reference/document_interacting/document_interacting/`} class="document_interacting-card" style="text-decoration: none;">
+  <a href={`${import.meta.env.BASE_URL}reference/document_interacting/document_interacting/`} class="document_interacting-card" style="text-decoration: none;">
 	  <Card title="Document Interacting" icon="add-document">
 		  Modify Microsoft Word documents directly with R.
 	  </Card>
 	</a>
 	  
- <a href={`${import.meta.env.BASE_URL}/reference/report_building/report_building/`} class="clickable-card" style="text-decoration: none;">
+ <a href={`${import.meta.env.BASE_URL}reference/report_building/report_building/`} class="clickable-card" style="text-decoration: none;">
     <Card title="Report Building" icon="seti:word">
       Assemble polished reports with ease.
     </Card>
   </a>
 	  
-<a href={`${import.meta.env.BASE_URL}/reference/utilities/utilities/`} class="utilities-card" style="text-decoration: none;">
+<a href={`${import.meta.env.BASE_URL}reference/utilities/utilities/`} class="utilities-card" style="text-decoration: none;">
     <Card title="Utilities" icon="seti:R">
       Helper functions to assist as you draft your reports.
     </Card>
