--- a/src/content/docs/reference/setup/setup.mdx
+++ b/src/content/docs/reference/setup/setup.mdx
@@ -10,4 +10,5 @@ import { Steps } from '@astrojs/starlight/components';
 <Steps>
 1. <a href={`${import.meta.env.BASE_URL}reference/setup/initialize_report_project/`}>initialize_report_project</a>
 2. <a href={`${import.meta.env.BASE_URL}reference/setup/initialize_python/`}>initialize_python</a>
+3. <a href={`${import.meta.env.BASE_URL}reference/setup/sync_report_project/`}>sync_report_project</a>
 </Steps>
